Do not use RpcService in forwardingrules-sync
Use simple Rpcs instead of aggregates, which gives us better
inter-component binding.

JIRA: OPNFLWPLUG-1125
Change-Id: Ie3c914cc7c9ca824a3a7eed6461bb2e657af7489
Signed-off-by: lubos-cicut <lubos.cicut@pantheon.tech>
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>